--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zepto-browserify",
-  "version": "1.0.0",
+  "version": "1.1.3-0",
   "description": "Shim repository for the Zepto.js JavaScript library for Browserify",
   "main": "zepto.js",
   "scripts": {
